fix color contrast and mobile responsiveness

--- a/css/about.css
+++ b/css/about.css
@@ -35,7 +35,7 @@
 }
 
 .about-img {
-  flex: 30%;
+  flex-basis: 30%;
   margin: auto;
 }
 
@@ -47,13 +47,13 @@
 
 .about-paragraph {
   align-self: center;
-  flex: 70%;
+  flex-basis: 70%;
   padding-left: 1.5em;
 }
 
 @media only screen and (max-width: 56.25em) {
   .flex-item {
-    flex: 40%;
+    flex-basis: 40%;
     padding: 1.5em 0;
   }
 
@@ -68,11 +68,12 @@
 
   .about-paragraph {
     align-self: center;
+    padding: 0;
   }
 }
 
 @media only screen and (max-width: 31.25em) {
   .flex-item {
-    flex: 90%;
+    flex-basis: 95%;
   }
 }
