--- a/css/home.css
+++ b/css/home.css
@@ -21,8 +21,7 @@
 }
 
 .home .content {
-  flex: 100%;
-  padding: 0.5em 0.5em;
+  flex-basis: 98%;
 }
 
 .content .greeting-message {
