--- a/css/navbar.css
+++ b/css/navbar.css
@@ -89,8 +89,8 @@ nav a:hover {
   border: none;
   background: transparent;
   cursor: pointer;
-  padding-left: 0.7rem;
-  justify-self: flex-end;
+  margin-left: auto;
+  margin-right: auto;
   outline: none;
 }
 
