--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -81,7 +81,7 @@
 .card-links a {
   border: 1px solid var(--blue-shade);
   border-radius: 5px;
-  color: var(--white);
+  color: var(--text-color);
   display: inline-block;
   padding: 0.5em;
   text-decoration: none;
