--- a/css/style.css
+++ b/css/style.css
@@ -171,14 +171,14 @@ img {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 700;
   letter-spacing: 1.2px;
   line-height: 1.6;
 }
 
 h2 {
-  font-size: 4.2rem;
+  font-size: 3.2rem;
   font-weight: 600;
   letter-spacing: 1px;
 }
@@ -189,136 +189,6 @@ h3 {
 
 h4 {
   font-size: 1.5rem;
-}
-
-/*=================
-  Footer 
-==================*/
-footer {
-  background-color: var(--footer-bkg-color);
-  color: var(--light-gray);
-  flex-direction: column;
-  font-size: 0.8em;
-  width: 100%;
-  height: 350px;
-  position: relative;
-  text-align: center;
-}
-
-footer .content {
-  flex-direction: column;
-  padding: 1.5rem;
-}
-
-.footer-content {
-  display: grid;
-  grid-template-areas: "footer-social-links footer-nav-links footer-nav-links privacy privacy";
-  gap: 1.5rem;
-  width: 100%;
-}
-
-.footer-social-links {
-  grid-area: footer-social-links;
-}
-
-.footer-nav-links {
-  grid-area: footer-nav-links;
-}
-
-.privacy {
-  grid-area: privacy;
-}
-
-footer p {
-  padding: 2rem 0;
-  margin-bottom: 2rem;
-}
-
-.copyright-author {
-  color: #1ea2f1;
-}
-
-footer .fa-heart {
-  color: var(--main-red);
-}
-
-footer a {
-  color: var(--text-color);
-  font-size: 1.2rem;
-  margin: 0.5em 0;
-  padding: 0.5em;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.footer-social-links a {
-  align-items: center;
-  background-color: var(--footer-bkg-color);
-  border: 1px solid var(--blue-shade);
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-}
-
-footer a i {
-  flex-basis: auto;
-}
-
-footer .fab {
-  font-size: 20px;
-  padding-right: 0.5em;
-}
-
-.twitter i {
-  color: #1ea2f1;
-}
-
-.linkedin i {
-  color: #0c65c2;
-}
-
-.facebook i {
-  color: #0e92f3;
-}
-
-.github:hover,
-.codepen:hover {
-  background-color: black;
-  color: var(--white);
-}
-
-.linkedin:hover {
-  background-color: #0c65c2;
-  color: var(--white);
-}
-
-.twitter:hover {
-  background-color: #1ea2f1;
-  color: var(--white);
-}
-
-.facebook:hover {
-  background-color: #0e92f3;
-  color: var(--white);
-}
-
-footer a:hover i {
-  color: var(--white);
-}
-
-.back-to-top {
-  cursor: pointer;
-  color: var(--red);
-  display: none;
-  font-size: 50px;
-  position: fixed;
-  right: 0.5em;
-  bottom: 8%;
-  transition: all 0.5s ease;
-}
-
-.back-to-top:hover {
-  color: var(--blue-shade);
 }
 
 /*==============
